[package]
name = "discord-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures-util = "0.3.24"
poll-promise = { version = "0.1.0", features = ["tokio"] }
lazy_static = "1.4.0"
rand = "0.8.5"

reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
async-tungstenite = { version = "*", features = ["async-std-runtime", "async-native-tls"] }
async-native-tls = "0.4.0"

egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
